[gd_scene load_steps=9 format=3 uid="uid://crfm7gkp0huic"]

[ext_resource type="PackedScene" uid="uid://cyq1uio4dcbqv" path="res://wounds/components/suturable.tscn" id="1_1ufoo"]
[ext_resource type="Script" path="res://wounds/complete/closing_incision.gd" id="1_op5ar"]
[ext_resource type="Texture2D" uid="uid://cybd4bhinrrh" path="res://sprites/wounds/closing_incision_1.png" id="2_n7sj5"]
[ext_resource type="Texture2D" uid="uid://bdbdqoypslq8t" path="res://sprites/wounds/closing_incision_sutured.png" id="3_08ftl"]
[ext_resource type="PackedScene" uid="uid://2g2n60t72iok" path="res://wounds/components/gelable.tscn" id="5_6wc8k"]
[ext_resource type="PackedScene" uid="uid://maqgmtoowomc" path="res://wounds/components/bandagable.tscn" id="6_7lt25"]

[sub_resource type="SpriteFrames" id="SpriteFrames_c7kbn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_n7sj5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_08ftl")
}],
"loop": true,
"name": &"sutured",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_02o34"]
size = Vector2(55, 267)

[node name="ClosingIncision" type="Node2D"]
script = ExtResource("1_op5ar")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c7kbn")

[node name="Suturable" parent="." instance=ExtResource("1_1ufoo")]
scale = Vector2(1, 2.88)
required_score = 6.0

[node name="Gelable" parent="." instance=ExtResource("5_6wc8k")]
monitorable = false
health = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gelable"]
shape = SubResource("RectangleShape2D_02o34")

[node name="Bandagable" parent="." instance=ExtResource("6_7lt25")]
scale = Vector2(1, 2.67)
monitorable = false

[connection signal="being_hit" from="Suturable" to="." method="_on_suturable_being_hit"]
[connection signal="treated" from="Gelable" to="." method="_on_gelable_treated"]
[connection signal="being_hit" from="Bandagable" to="." method="_on_bandagable_being_hit"]
